sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:76: error: reassignment to val
    pos = posTrou;
        ^